[tool.poetry]
name = "rtp-decoder"
version = "0.1.0"
description = ""
authors = ["krgough <krgough@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
dpkt = "^1.9.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "rtp_decoder.rtp_packets:main"
